Fix squishing issue with images

--- a/springbok-site/themes/syna/assets/styles/_portfolio.scss
+++ b/springbok-site/themes/syna/assets/styles/_portfolio.scss
@@ -26,6 +26,7 @@
     filter: brightness(60%);
     height: 100%;
     min-width: 100%;
+    object-fit: cover;
   }
 
   .badge-container {
