--- a/springbok-site/themes/syna/assets/styles/_syna.scss
+++ b/springbok-site/themes/syna/assets/styles/_syna.scss
@@ -298,14 +298,14 @@ $theme-colors
   position: absolute;
   bottom: 1rem;
   left: 1rem;
-  width: 60%;
+  width: 75%;
 }
 
 .stick-bottom-right{
   position: absolute;
   bottom: 1rem;
   right: 1rem;
-  width: 60%;
+  width: 75%;
 }
 
 .straight-border{
